org.mmisw.vine - Web VINE
Carlos Rueda - MMI / MBARI

ChangeLog

2009-05-13
	Extracted several server operations into a separate new module org.mmisw.iserver, 
	which I'm starting to also use to support the portal interface and eventually 
	other operations as the refactoring progresses.
	See sibling project org.mmisw.iserver.

2009-05-11
	- Include trailing slash for the prefixed namespaces so the terms are shown now
	  with only the <letter>:  prefix (and not <letter>:/)
	  
	- EntityInfo now with explicit attribute "URI".
	- SearchResultsForm: If the URI is <uri> = "urn:something", then the link is now:
	     http://mmisw.org/ont?uri=<uri>
	
2009-05-07
	- Util.addIndividuals: if ontologyUri is NOT a prefix of the retrieved entityUri,
	  now uses that entityUri as the "local name"; Note that the query is made against 
	  the ontology, so every individual found there should be included.
	  NOTE: this should perhaps be done to the other entities found in the ontology, but
	  only doing it for individuals as I am preparing the dispatch of URIs that are
	  completely specified in voc2rdf (first column) and not as a composition of the
	  ontology base URI and the key given to the term.
	
2009-04-20
	- automatically open row disclosure in search results when only one result.
	

2009-04-17
	- Show associated properties and values for entities in the Search result form. 
	- Besides individuals, search now also includes owl:classes, rdf:properties,
	  owl:DatatypeProperty's, and owl:ObjectProperty's with the
	  search string also applied on the values of any associated properties of those entities.
	
2009-04-06  1.5.0.alpha1
	- Added some (?) tooltips and some "not implemented" actions to proceed with asking
	  for feedback especially regarding UI.
	  
	  Here are some the next steps regarding the core functionality:
	  	- Determine the mapping ontology to use as a basis for all mappings